# jrpc

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  LICENSE  README  README.md  install_deps.sh
example/chat-server/: main.c  main.cc
example/chat-server/www/: index.html
example/chat-server/www/js/: startup.js
example/chat-server/www/style/: main.css
include/: jrpc.h
include/jrpc/: api.h  connection.h  server.h
lib/jrpc/: connection.c  connection_intern.h  message.c  message.h  protocol.c  protocol.h  queue.c  queue.h  server.c  util.h
